--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "type": "module",
+  "scripts": {
+    "build": "node build.js"
+  },
   "dependencies": {
     "html-dom-parser": "^5.0.8",
     "markdown-it": "^14.1.0",
